<resources>
    <string name="app_name">BeibeiSmart</string>
    <!--首页-->
    <string name="btn_MainActivity_music">音乐</string>
    <string name="btn_MainActivity_story">故事</string>
    <string name="btn_MainActivity_cyclopedia">百科</string>
    <string name="btn_MainActivity_english">英语</string>
    <string name="btn_MainActivity_download">在线下载</string>
    <string name="welcome">你好！请叫我贝贝！</string>

    <!--英语-->
    <string name="btn_word">单词</string>
    <string name="btn_vedio">视频</string>
    <string name="btn_movie">电影</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--LFRecyclerView-->

    <string name="lfrecyclerview_header_hint_normal">下拉刷新</string>
    <string name="lfrecyclerview_header_hint_ready">松开刷新数据</string>
    <string name="lfrecyclerview_header_hint_loading">正在加载...</string>
    <string name="lfrecyclerview_header_last_time">上次更新时间：</string>
    <string name="lfrecyclerview_footer_hint_normal">查看更多</string>
    <string name="lfrecyclerview_footer_hint_ready">松开载入更多</string>
    <string name="lfrecyclerview_header_hint_success">刷新成功</string>
    <string name="lfrecyclerview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
</resources>
